src/objects/AB2__AdBookSyncSettings__mdt.object
<CustomObject>
    <description>Settings controlling how records will be synced to and from AdBook.</description>
    <fields>
        <fullName>AB2__AutoLimitedSyncStageProbabilityThreshold__c</fullName>
        <description>Once an Opportunities Stage based probability reaches this threshold the order will be auto limited synced to AdBook</description>
        <inlineHelpText>Once an Opportunities Stage based probability reaches this threshold the order will be auto limited synced to AdBook</inlineHelpText>
        <label>AutoLimitedSyncStageProbabilityThreshold</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__AutoSyncStageProbabilityThreshold__c</fullName>
        <description>Once an Opportunities Stage based probability reaches this threshold the order will be auto synced to AdBook</description>
        <inlineHelpText>Once an Opportunities Stage based probability reaches this threshold the order will be auto synced to AdBook</inlineHelpText>
        <label>Auto Sync Stage Probability Threshold</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__RefreshApexCpuLimitThreshold__c</fullName>
        <description>Once the CPU limit is detected past this threshold of the available resources it will be changed to an Out Of Sync record for the batch process to handle</description>
        <inlineHelpText>Once the CPU limit is detected past this threshold of the available resources it will be changed to an Out Of Sync record for the batch process to handle</inlineHelpText>
        <label>Refresh Apex CPU Limit Threshold</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AB2__SalesforceRefreshFromAdBookForOutOfSync__c</fullName>
        <description>Controls how Orders stored in AdBook will be synced to Salesforce when flagged as OutOfSync</description>
        <inlineHelpText>Controls how Orders stored in AdBook will be synced to Salesforce when flagged as OutOfSync</inlineHelpText>
        <label>Salesforce Refresh from AdBook OutOfSync</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
                <value>
                    <fullName>OpportunityOnly</fullName>
                </value>
                <value>
                    <fullName>DropsOnly</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__SalesforceRefreshFromAdBook__c</fullName>
        <description>Controls how Orders stored in AdBook will be synced to Salesforce</description>
        <inlineHelpText>Controls how Orders stored in AdBook will be synced to Salesforce</inlineHelpText>
        <label>Salesforce Refresh From AdBook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
                <value>
                    <fullName>OpportunityOnly</fullName>
                    <label>Opportunity Only</label>
                </value>
                <value>
                    <fullName>DropsOnly</fullName>
                    <label>Drops Only</label>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__SalesforceSyncToAdBookForOutOfSync__c</fullName>
        <description>Controls how Orders stored in Salesforce will be synced to AdBook if the Opportunity is flagged as OutOfSync</description>
        <inlineHelpText>Controls how Orders stored in Salesforce will be synced to AdBook if the Opportunity is flagged as OutOfSync</inlineHelpText>
        <label>Salesforce Sync To AdBook for OutOfSync</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
                <value>
                    <fullName>OpportunityOnly</fullName>
                    <label>Opportunity Only</label>
                </value>
                <value>
                    <fullName>DropsOnly</fullName>
                    <label>Drops Only</label>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__SalesforceSyncToAdBook__c</fullName>
        <description>Controls how Orders stored in Salesforce will be synced to AdBook</description>
        <inlineHelpText>Controls how Orders stored in Salesforce will be synced to AdBook</inlineHelpText>
        <label>Salesforce Sync To AdBook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                    <default>true</default>
                    <label>Full</label>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ShowLimitedUpdateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the Limited Update Order button appear on the Order sync page?</description>
        <inlineHelpText>Should the Limited Update Order button appear on the Order sync page?</inlineHelpText>
        <label>Show Limited Update Order</label>
        <type>Checkbox</type>
    </fields>
    <label>AdBook Sync Settings</label>
    <pluralLabel>AdBook Sync Settings</pluralLabel>
</CustomObject>